...
  String get menu => 'Menu';

  @override
  String get cart => 'Cart';

  @override
  String get orders => 'Orders';

  @override
  String get tables => 'Tables';

  @override
  String get categories => 'Categories';
...
