...
  @override
  Future<List<CategoryModel>> fetchCategories() async {
    if (_client == null) {
      return [
        CategoryModel(
          id: '1',
          name: 'Entradas',
          sortOrder: 1,
          active: true,
          createdAt: DateTime.now(),
          updatedAt: DateTime.now(),
        ),
        CategoryModel(
...
